[gd_scene load_steps=2 format=3 uid="uid://dwbtuntwwfrpi"]

[ext_resource type="Script" path="res://Menu/Scripts/properties_menu_row.gd" id="1_jsu7v"]

[node name="PropertiesContainer" type="Panel"]
custom_minimum_size = Vector2(0, 31)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -234.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jsu7v")

[node name="ValuesRowContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 862.0
offset_bottom = 31.0

[node name="IDNumberContainer" type="PanelContainer" parent="ValuesRowContainer"]
layout_mode = 2

[node name="IDNumberLabel" type="Label" parent="ValuesRowContainer/IDNumberContainer"]
custom_minimum_size = Vector2(30, 31)
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameContainer" type="PanelContainer" parent="ValuesRowContainer"]
layout_mode = 2

[node name="NameLine" type="LineEdit" parent="ValuesRowContainer/NameContainer"]
custom_minimum_size = Vector2(750, 31)
layout_mode = 2
placeholder_text = "Name"

[node name="TypesContainer" type="PanelContainer" parent="ValuesRowContainer"]
layout_mode = 2

[node name="TypesButton" type="OptionButton" parent="ValuesRowContainer/TypesContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 31)
layout_mode = 2
clip_text = true
item_count = 8
selected = 0
fit_to_longest_item = false
popup/item_0/text = "BOOL"
popup/item_0/id = 0
popup/item_1/text = "INT8"
popup/item_1/id = 1
popup/item_2/text = "INT16"
popup/item_2/id = 2
popup/item_3/text = "INT32"
popup/item_3/id = 3
popup/item_4/text = "REAL"
popup/item_4/id = 4
popup/item_5/text = "POINTER"
popup/item_5/id = 5
popup/item_6/text = "VECTOR4"
popup/item_6/id = 6
popup/item_7/text = "QUATERNION"
popup/item_7/id = 7

[connection signal="text_changed" from="ValuesRowContainer/NameContainer/NameLine" to="." method="_on_name_line_text_changed"]
[connection signal="item_selected" from="ValuesRowContainer/TypesContainer/TypesButton" to="." method="_on_types_button_item_selected"]
